Java 11 fixes