@@ -135,7 +135,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                      <argLine>-Xmx2g</argLine>
+                      <argLine>-Xmx2g --add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
             </plugins>
@@ -193,6 +193,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
